squashing bugs

--- a/Main.css
+++ b/Main.css
@@ -45,25 +45,16 @@ body {
     right: 0;
     width: 100%;
     min-height: 100%;
-
     /* margin-left: -220px; */
-
-    z-index: -1;
-
     display: block;
     overflow: hidden;
-
-}
-
-/* Style the video: 100% width and height to cover the entire window */
-.video_container {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: -100;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
 }
 
 .fullscreen-bg__video {
